'Frozen autocommit 2024-12-17 00:44:03.412594'